--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.datasource.password=${DB_PASSWORD}
 # Configurações do JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+server.port=${PORT:8080}
 
